facebook login with graph api

--- a/web/index.html
+++ b/web/index.html
@@ -5,5 +5,32 @@
 </head>
 <body>
                testests
+<script>
+    var facebookInitDone = function(response){
+        console.log("facebook init was not overridden");
+    };
+
+    window.fbAsyncInit = function() {
+        FB.init({
+            appId      : '<%= facebook_app_id %>',
+            status     : true,
+            cookie     : true,
+            xfbml      : true,
+            oauth      : true
+        });
+
+        FB.getLoginStatus(function(response){
+            facebookInitDone(response);
+        });
+    };
+
+    (function(d){
+        var js, id = 'facebook-jssdk'; if (d.getElementById(id)) {return;}
+        js = d.createElement('script'); js.id = id; js.async = true;
+        js.src = "//connect.facebook.net/en_US/all.js";
+        d.getElementsByTagName('head')[0].appendChild(js);
+    }(document));
+
+</script>
 </body>
 </html>
