--- a/web/index.html
+++ b/web/index.html
@@ -1,35 +1,54 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>test</title>
+  <title>Pong game website</title>
+  <script src="../client/public/javascripts/compiled.js"></script>
 </head>
 <body>
-               testests
+testests
+<button id="login">LOGIN</button>
 <script>
-    var facebookInitDone = function(response){
-        console.log("facebook init was not overridden");
-    };
+  var facebookInitDone = function (response) {
+    console.log("facebook init was not overridden");
+  };
 
-    window.fbAsyncInit = function() {
-        FB.init({
-            appId      : '<%= facebook_app_id %>',
-            status     : true,
-            cookie     : true,
-            xfbml      : true,
-            oauth      : true
-        });
+  window.fbAsyncInit = function () {
+    FB.init({
+      appId: '<%= facebook_app_id %>',
+      status: true,
+      cookie: true,
+      xfbml: true,
+      oauth: true
+    });
 
-        FB.getLoginStatus(function(response){
-            facebookInitDone(response);
-        });
-    };
+    FB.getLoginStatus(function (response) {
+      facebookInitDone(response);
+    });
+  };
 
-    (function(d){
-        var js, id = 'facebook-jssdk'; if (d.getElementById(id)) {return;}
-        js = d.createElement('script'); js.id = id; js.async = true;
-        js.src = "//connect.facebook.net/en_US/all.js";
-        d.getElementsByTagName('head')[0].appendChild(js);
-    }(document));
+  (function (d) {
+    var js, id = 'facebook-jssdk';
+    if (d.getElementById(id)) {
+      return;
+    }
+    js = d.createElement('script');
+    js.id = id;
+    js.async = true;
+    js.src = "//connect.facebook.net/en_US/all.js";
+    d.getElementsByTagName('head')[0].appendChild(js);
+  }(document));
+
+  require(['jquery'], function ($) {
+    $("#login").click(function () {
+      FB.login(function (response) {
+        if (response.authResponse) {
+          console.log('Welcome!  Fetching your information.... ');
+        } else {
+          console.log('User cancelled login or did not fully authorize.');
+        }
+      });
+    });
+  });
 
 </script>
 </body>
