facebook login wip

--- a/web/index.html
+++ b/web/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Pong game website</title>
-  <script src="../client/public/javascripts/compiled.js"></script>
+  <script src="/javascripts/compiled.js"></script>
 </head>
 <body>
 testests
