--- a/web/index.html
+++ b/web/index.html
@@ -9,51 +9,24 @@ testests
 <button id="login">LOGIN</button>
 <div id="jfmfs-container"></div>
 <script>
-  var facebookInitDone = function (response) {
-    console.log("facebook init was not overridden");
-  };
-
-  window.fbAsyncInit = function () {
-    FB.init({
-      appId: '<%= facebook_app_id %>',
-      status: true,
-      cookie: true,
-      xfbml: true,
-      oauth: true
-    });
-
-    FB.getLoginStatus(function (response) {
-      facebookInitDone(response);
-    });
-  };
-
-  (function (d) {
-    var js, id = 'facebook-jssdk';
-    if (d.getElementById(id)) {
-      return;
-    }
-    js = d.createElement('script');
-    js.id = id;
-    js.async = true;
-    js.src = "//connect.facebook.net/en_US/all.js";
-    d.getElementsByTagName('head')[0].appendChild(js);
-  }(document));
-
-  require(['jquery'], function ($) {
+  require(['jquery', 'facebook-api!appId:<%= facebook_app_id %>'], function ($, FB) {
     $("#login").click(function () {
-      FB.login(function (response) {
-        if (response.authResponse) {
-          console.log('Welcome!  Fetching your information.... ');
-        } else {
-          console.log('User cancelled login or did not fully authorize.');
-        }
+      FB.api('/me', function(me){
+        console.log(me.name);
       });
+//      FB.login(function (response) {
+//        if (response.authResponse) {
+//          console.log('Welcome!  Fetching your information.... ');
+//        } else {
+//          console.log('User cancelled login or did not fully authorize.');
+//        }
+//      });
     });
   });
 
-  require(['jquery', 'jquery.facebook.multifriend.select'], function($, fbFriends){
-    $("#jfmfs-container").jfmfs();
-  });
+//  require(['jquery', 'jquery.facebook.multifriend.select'], function($, fbFriends){
+//    $("#jfmfs-container").jfmfs();
+//  });
 
 </script>
 </body>
