--- a/www/index.html
+++ b/www/index.html
@@ -1,9 +1,34 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <script data-main="js/app" src="js/lib/require.js"></script>
-    </head>
-    <body>
-        <h1>Hello World</h1>
-    </body>
+<head>
+  <title>Pong game website</title>
+  <script data-main="js/app" src="js/lib/require.js"></script>
+</head>
+<body>
+testests
+<button id="login">LOGIN</button>
+<div id="jfmfs-container"></div>
+<script>
+
+//  require(['jquery', 'facebook-api!appId:<%= facebook_app_id %>'], function ($, FB) {
+//    $("#login").click(function () {
+//      FB.api('/me', function(me){
+//        console.log(me.name);
+//      });
+//      FB.login(function (response) {
+//        if (response.authResponse) {
+//          console.log('Welcome!  Fetching your information.... ');
+//        } else {
+//          console.log('User cancelled login or did not fully authorize.');
+//        }
+//      });
+//    });
+//  });
+
+  //  require(['jquery', 'jquery.facebook.multifriend.select'], function($, fbFriends){
+  //    $("#jfmfs-container").jfmfs();
+  //  });
+
+</script>
+</body>
 </html>
