socket.io and box2d used as a proof of concept. next - setting up canvas client

--- a/www/html/index.html
+++ b/www/html/index.html
@@ -3,6 +3,7 @@
 <head>
   <title>Pong game website</title>
   <script src="/js/build/build.js"></script>
+  <script src="/socket.io/socket.io.js"></script>
 </head>
 <body>
 <button id="login">LOGIN</button>
