--- a/www/html/index.html
+++ b/www/html/index.html
@@ -2,14 +2,14 @@
 <html>
 <head>
   <title>Pong game website</title>
-  <script src="/js/build/build.js"></script>
+  <script src="/js/build/build-dev.js"></script>
   <script src="/socket.io/socket.io.js"></script>
 </head>
 <body>
 <button id="login">LOGIN</button>
 <div id="jfmfs-container"></div>
 <script type="text/javascript">
-	require("pong-mmo-server/js/index.js").initFacebook('<%= facebook_app_id %>');
+	var main = require("pong-mmo-server");
 </script>
 </body>
 </html>
