supporting new PongGame version, WIP

--- a/demo/index.html
+++ b/demo/index.html
@@ -6,6 +6,9 @@
   <script src="/socket.io/socket.io.js"></script>
 </head>
 <body>
+<div id="container">
+  
+</div>
 <script type="text/javascript">
   var Game = require('pong-mmo-client');
   
